<resources>
    <string name="app_name">Where\'s The Bus</string>
    <string name="title_home">Favorites</string>
    <string name="title_trips">Trips</string>
    <string name="title_nearby">Nearby</string>
    <string name="title_settings">Settings</string>
    <string name="desc_fab_new_fav">Add new favourite bus stop button</string>
    <string name="fab_new_fav_text">Add Favourite</string>
    <string name="hint_fav_search">Type a bus number or street name</string>
    <string name="recycler_all_trips">All Trips</string>
    <string name="recycler_upcoming_trips">Upcoming Trips</string>
    <string name="recycler_active_trips">Active Trips</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="preference_tap_action_all">Get nearest from all stops</string>
    <string name="preference_tap_action_favourites">Get nearest from favourites</string>
    <string name="preference_tap_action_hybrid">Get favourites first, if none nearby then check from all</string>
    <string name="preference_tap_action_all_value">all</string>
    <string name="preference_tap_action_favourites_value">fav</string>
    <string name="preference_tap_action_hybrid_value">hybrid</string>
    <string name="preference_appearance_default_entry">System default</string>
    <string name="preference_appearance_light_entry">Light</string>
    <string name="preference_appearance_dark_entry">Dark</string>
    <string name="preference_appearance_default_value">DEFAULT</string>
    <string name="preference_appearance_light_value">LIGHT</string>
    <string name="preference_appearance_dark_value">DARK</string>
    <string name="preferences_poll_1_entry">1 minute</string>
    <string name="preferences_poll_3_entry">3 minutes</string>
    <string name="preferences_poll_5_entry">5 minutes</string>
    <string name="category_about">About</string>
    <string name="preference_webpage">Webpage</string>
    <string name="wtb_url">wheres-the-bus.pages.dev</string>
    <string name="preference_repo">GitHub Repo</string>
    <string name="wtb_repo">github.com/JoshuaJLi/cmpt362-wtb</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="wtb_feedback">wheres-the-bus.pages.dev/feedback</string>
    <string name="key_trip_poll_time">trip_poll_time</string>
    <string name="preference_trip_poll_time">trip_poll_time</string>
    <string name="key_tap_action">tap_action</string>
    <string name="expand_list">Expand List</string>
    <string name="center_map_on_current_location">Center map on current location</string>

    <string name="fab_new_trip_text">Add Trip</string>
    <string name="desc_fab_new_trip">Add Trip</string>
    <string name="heading_trip_calendar">Starts On</string>
    <string name="heading_trip_notification">Notification Duration</string>
    <string name="desc_fab_save_trip">Save Trip</string>
    <string name="fab_save_trip">Save</string>
    <string name="hint_trip_name">New Trip Name</string>
    <string name="add_stop_button_text">Add a stop</string>
    <string name="add_trip_time_button_text">Add a time</string>
    <string name="send_notifications">Send Notifications</string>
    <string name="heading_trip_stop">Bus Stops</string>
    <string name="fab_cancel_trip">Cancel</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="at">\@</string>
    <string name="notification_duration_minutes">Notification Duration (minutes)</string>
    <string name="key_trip_text_mode">trip_text_mode</string>
    <string-array name="notification_timer_options">
        <item>No notification</item>
        <item>1 minute</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
    </string-array>
</resources>