<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="General">

        <ListPreference
            android:title="Compass Tap Action"
            app:defaultValue="@string/preference_tap_action_all_value"
            app:entries="@array/tap_action_entries"
            app:entryValues="@array/tap_action_values"
            app:iconSpaceReserved="false"
            app:key="@string/key_tap_action"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:title="Trip Polling Interval"
            app:defaultValue="1"
            app:entries="@array/trip_polling_entries"
            app:entryValues="@array/trip_polling_values"
            app:iconSpaceReserved="false"
            app:key="@string/key_trip_poll_time"
            app:summary="How often an active trip will check bus times" />

        <SwitchPreference
            android:iconSpaceReserved="false"
            android:title="Texting Mode"
            app:defaultValue="false"
            app:key="@string/key_trip_text_mode"
            app:summary="Send SMS text to find nearby bus times" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Appearance">

        <ListPreference
            android:title="Theme"
            app:defaultValue="@string/preference_appearance_default_value"
            app:entries="@array/appearance_entries"
            app:entryValues="@array/appearance_values"
            app:iconSpaceReserved="false"
            app:key="appearance"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/category_about">

        <Preference
            app:iconSpaceReserved="false"
            app:summary="@string/wtb_url"
            app:title="@string/preference_webpage">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://wheres-the-bus.pages.dev/" />
        </Preference>

        <Preference
            app:iconSpaceReserved="false"
            app:summary="@string/wtb_repo"
            app:title="@string/preference_repo">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/JoshuaJLi/cmpt362-wtb/" />
        </Preference>

        <Preference
            app:iconSpaceReserved="false"
            app:summary="@string/wtb_feedback"
            app:title="@string/send_feedback">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
        </Preference>
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>