<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ca.wheresthebus.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_trips"
        android:name="ca.wheresthebus.ui.trips.TripsFragment"
        android:label="@string/title_trips"
        tools:layout="@layout/fragment_trips" />

    <fragment
        android:id="@+id/navigation_nearby"
        android:name="ca.wheresthebus.ui.nearby.NearbyFragment"
        android:label="@string/title_nearby"
        tools:layout="@layout/fragment_nearby" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ca.wheresthebus.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>