<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.trips.TripsFragment">

            <TextView
                android:id="@+id/label_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginVertical="10dp"
                android:text="@string/recycler_active_trips" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_active_trips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_upcoming_trips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginVertical="10dp"
                android:text="@string/recycler_upcoming_trips" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_upcoming_trips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_all_trips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginVertical="10dp"
                android:text="@string/recycler_all_trips" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_inactive_trips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_new_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|center"
        android:contentDescription="@string/desc_fab_new_trip"
        android:text="@string/fab_new_trip_text"
        app:icon="@drawable/ic_add_black_dp24"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
