<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".ui.home.HomeFragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fitsSystemWindows="true"
    android:windowSoftInputMode="adjustResize"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_trip_name"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:importantForAccessibility="yes"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/calendar_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/heading_trip_calendar" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_route_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_route_button_text"
                style="@style/Widget.Material3.Button.TextButton"
                />

            <TextView
                android:id="@+id/notification_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"

                android:text="@string/heading_trip_notification" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_new_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|center"
        android:contentDescription="@string/desc_fab_save_trip"
        android:text="@string/fab_save_trip"
        app:icon="@drawable/baseline_draw_24"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
